# event

./: .coveragerc  .gitignore  .pylintrc  LICENSE  Makefile  README.md  data.json  driver_config.json  manage.py  package-lock.json  pylintrc  pyproject.toml  requirements.txt  selenium_test.py  sheets.googleapis.com-python.json  vercel.json
.github/workflows/: add_project.yml  auto_add_project.yml  django.yml  pylint.yml
TEDx/: asgi.py  settings.py  urls.py  wsgi.py
apps/base/: apps.py  models.py  urls.py  views.py
apps/dashboard/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  utils.py  views.py
apps/payment/: apps.py  models.py
apps/products/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
apps/users/: apps.py  forms.py  models.py  urls.py  views.py
base/: admin.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_auto_20210905_1319.py  0002_remove_videos_membername_videos_user.py  0003_alter_videos_id.py  0003_subscribe_date_subscribed.py  0004_attendee.py  0004_remove_speakers_image_alter_speakers_id_and_more.py  0004_remove_videos_id_alter_contact_id_alter_subscribe_id_and_more.py  0004_speakers.py  0005_speakers_description.py  0005_speakers_image.py  0006_alter_speakers_talk_name.py  0006_speakers_facebook_speakers_instagram_and_more.py  0007_remove_speakers_description_remove_speakers_facebook_and_more.py  0007_rename_created_speakers_date_posted.py  0008_alter_speakers_name.py  0009_merge_0004_attendee_0008_alter_speakers_name.py  0010_delete_attendee.py
base/templatetags/: bgcolor.py
base/tests/: test_base.py
core/: manage.py
core/TEDx/: settings.py  urls.py
dashboard/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_report_author.py  0002_design_palette.py  0003_alter_report_author.py  0003_design_generated_colors.py  0004_alter_design_palette.py  0004_notification.py  0005_alter_design_palette.py  0005_delete_notification.py  0006_alter_report_id.py  0006_delete_design.py  0007_design.py  0008_alter_design_color.py  0009_design_font_color.py
dashboard/tests/: test_PRHR.py  test_dashboard.py  test_dashboard_models.py  test_products.py  test_views.py  tests_views.py
media/: Thumbs.db
media/products/: OIP.jfif  (+1 more)
payment/: admin.py  forms.py  models.py  paymob.py  urls.py  views.py
products/: admin.py  forms.py  models.py  utils.py  views.py
staticfiles/: staticfiles.json
users/: admin.py  forms.py  models.py  token_generator.py  urls.py  views.py
utils/: selenium_test.py
(+292 files in other folders)
