[tool.poetry]
name = "tedx"
version = "0.1.0"
description = ""
authors = ["Mazen Omar <wildlifemain1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
pillow = "^9.3.0"
django-crispy-forms = "^1.14.0"
django-maintenance-mode = "^0.16.3"
django-ckeditor = "^6.5.1"
six = "^1.16.0"
qrcode = "^7.3.1"
xhtml2pdf = "^0.2.8"
whitenoise = "^6.3.0"
sentry-sdk = "^1.17.0"
accept-paymob = "^1.0.0"
faker = "^18.4.0"
pygsheets = "^2.0.6"
django-modeltranslation = "^0.18.9"
pylint = "^2.17.3"
python-dotenv = "^1.0.0"
pandas = "^2.0.1"
selenium = "^4.9.0"
dotenv = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
coverage = "^7.2.1"
pylint-django = "^2.5.3"
webdriver-manager = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
